[package]
name = "rust"
version = "0.1.0"
authors = ["Thomas Cowdrey <tommyarco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.126", features = ["derive"] }
itertools = "0.10.0"